samples/_failures_safe/1761181490_53a17f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92d70af9.c: In function ‘main’:
./samples/SAFE/__tmp_92d70af9.c:163:29: error: expected ‘)’ at end of input
  163 |         if (!add_edge(&graph
      |                      ~      ^
      |                             )
./samples/SAFE/__tmp_92d70af9.c:163:14: error: too few arguments to function ‘add_edge’
  163 |         if (!add_edge(&graph
      |              ^~~~~~~~
./samples/SAFE/__tmp_92d70af9.c:27:5: note: declared here
   27 | int add_edge(struct Graph* graph, int src, int dest, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_92d70af9.c:163:9: error: expected declaration or statement at end of input
  163 |         if (!add_edge(&graph
      |         ^~
./samples/SAFE/__tmp_92d70af9.c:163:9: error: expected declaration or statement at end of input
